[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3.64"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-react = "0.3.2"
